reescritura al manejo de exceptions