@@ -2,151 +2,162 @@ package org.adso.minimarket.handler;
 
 import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
-import lombok.NonNull;
-import org.adso.minimarket.error.BasicErrorResponse;
-import org.adso.minimarket.error.DataIntegrityViolationResponse;
-import org.adso.minimarket.error.ValidationErrorResponse;
+import jakarta.validation.Path;
 import org.adso.minimarket.exception.NotFoundException;
 import org.adso.minimarket.exception.WrongCredentialsException;
 import org.springframework.dao.DataIntegrityViolationException;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.http.converter.HttpMessageNotReadableException;
+import org.springframework.http.*;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
+import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RestControllerAdvice
-public class GlobalErrorHandler {
+public class GlobalErrorHandler extends ResponseEntityExceptionHandler {
 
     private static final Map<String, String> CONSTRAINT_MESSAGES = Map.of(
             "uk_user_email", "Email already in use"
     );
 
     @ExceptionHandler(DataIntegrityViolationException.class)
-    public ResponseEntity<@NonNull DataIntegrityViolationResponse> handleDataIntegrity(DataIntegrityViolationException ex) {
-        Throwable root = getRootCause(ex);
-        String message = root.getMessage() != null ? root.getMessage() : "";
+    public ResponseEntity<Object> handleDataIntegrityViolation(
+            DataIntegrityViolationException ex
+    ) {
+        var problem = ProblemDetail.forStatus(HttpStatus.CONFLICT);
+        problem.setTitle("Constraint violation");
 
-        DataIntegrityViolationResponse res = new DataIntegrityViolationResponse();
-        String lower = message.toLowerCase();
+        String message = Optional.ofNullable(getRootCause(ex))
+                .map(Throwable::getMessage)
+                .orElse("")
+                .toLowerCase();
 
-        res.setMessage("CONSTRAINT_VIOLATION");
-
-        for (String constraint : CONSTRAINT_MESSAGES.keySet()) {
-            if (lower.contains(constraint)) {
-
-                String field = constraint.substring(constraint.lastIndexOf("_") + 1);
-
-                res.addError(new DataIntegrityViolationResponse.ErrorDetail(
-                        CONSTRAINT_MESSAGES.get(constraint),
-                        field
-                ));
-
-                return new ResponseEntity<>(res, HttpStatus.CONFLICT);
+        CONSTRAINT_MESSAGES.forEach((constraint, detail) -> {
+            if (message.contains(constraint)) {
+                problem.setProperty(
+                        "errors",
+                        List.of(Map.of(
+                                "field", constraint.substring(constraint.lastIndexOf('_') + 1),
+                                "detail", detail
+                        ))
+                );
             }
+        });
+
+        if (!problem.getProperties().containsKey("errors")) {
+            problem.setDetail("Unknown conflict");
         }
 
-        res.setMessage("UNKNOWN_CONFLICT");
-
-        return new ResponseEntity<>(res, HttpStatus.CONFLICT);
+        return ResponseEntity.status(HttpStatus.CONFLICT).body(problem);
     }
 
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ValidationErrorResponse> handleValidationException(
-            MethodArgumentNotValidException ex) {
+    @Override
+    protected ResponseEntity<Object> handleMethodArgumentNotValid(
+            MethodArgumentNotValidException ex,
+            HttpHeaders headers,
+            HttpStatusCode status,
+            WebRequest request
+    ) {
 
-        Map<String, List<String>> groupedErrors = ex.getBindingResult()
+        ProblemDetail problem = ProblemDetail.forStatus(status);
+        problem.setTitle("Validation failed");
+        problem.setDetail("One or more constraints were violated");
+
+        List<Map<String, String>> errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
                 .collect(Collectors.groupingBy(
                         FieldError::getField,
                         Collectors.mapping(
                                 FieldError::getDefaultMessage,
-                                Collectors.toList())
-                ));
+                                Collectors.toList()
+                        )
+                ))
+                .entrySet()
+                .stream()
+                .map(entry -> Map.of(
+                        "field", entry.getKey(),
+                        "detail", String.join(" | ", entry.getValue())
+                ))
+                .toList();
 
-        ValidationErrorResponse response = new ValidationErrorResponse();
+        problem.setProperty("errors", errors);
 
-        groupedErrors.forEach((field, messages) -> {
-            String combinedMessage = String.join(" | ", messages);
-            response.addError(combinedMessage, field);
-        });
-
-        response.setMessage("VALIDATION_ERROR");
-
-        return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
+        return ResponseEntity.status(status).body(problem);
     }
 
     @ExceptionHandler(WrongCredentialsException.class)
-    public ResponseEntity<BasicErrorResponse> handleBadRequestException(
+    public ResponseEntity<Object> handleBadRequestException(
             WrongCredentialsException ex
     ) {
-        BasicErrorResponse err = new BasicErrorResponse();
-        err.setMessage(ex.getMessage());
-        err.setCode("UNAUTHORIZED");
-
-        return new ResponseEntity<>(err, HttpStatus.UNAUTHORIZED);
+        ProblemDetail problem = ProblemDetail.forStatusAndDetail(HttpStatus.UNAUTHORIZED, ex.getMessage());
+        problem.setTitle("unauthorized");
+        return ResponseEntity.status(problem.getStatus()).body(problem);
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<ValidationErrorResponse> handleConstraintViolationException(
+    public ResponseEntity<Object> handleConstraintViolationException(
             ConstraintViolationException ex
     ) {
-        ValidationErrorResponse err = new ValidationErrorResponse();
-        Map<String, String> groupedErrors = ex.getConstraintViolations().stream().collect(
-                Collectors.groupingBy(
-                        (violation -> {
-                            return violation.getPropertyPath().toString().split("\\.")[1];
-                        }),
-                        Collectors.mapping(ConstraintViolation::getMessage, Collectors.joining(", "))
-                )
+        var problem = ProblemDetail.forStatus(HttpStatus.BAD_REQUEST);
+        problem.setTitle("Validation failed");
+
+        problem.setProperty(
+                "errors",
+                ex.getConstraintViolations()
+                        .stream()
+                        .collect(Collectors.groupingBy(
+                                v -> extractFieldName(v.getPropertyPath()),
+                                Collectors.mapping(ConstraintViolation::getMessage, Collectors.toList())
+                        ))
+                        .entrySet()
+                        .stream()
+                        .map(e -> Map.of(
+                                "field", e.getKey(),
+                                "detail", String.join(" | ", e.getValue())
+                        ))
+                        .toList()
         );
 
-        groupedErrors.forEach(err::addError);
+        return ResponseEntity.badRequest().body(problem);
+    }
 
-        return new ResponseEntity<>(err, HttpStatus.BAD_REQUEST);
+    private static String extractFieldName(Path propertyPath) {
+        String field = null;
+        for (Path.Node node : propertyPath) {
+            field = node.getName();
+        }
+        return field != null ? field : propertyPath.toString();
     }
 
     @ExceptionHandler(NotFoundException.class)
-    public ResponseEntity<BasicErrorResponse> handleNotFoundException(
+    public ResponseEntity<Object> handleNotFoundException(
             NotFoundException ex
     ) {
-        BasicErrorResponse err = new BasicErrorResponse();
-        err.setMessage(ex.getMessage());
-        err.setCode("NOT_FOUND");
-
-        return new ResponseEntity<>(err, HttpStatus.NOT_FOUND);
+        ProblemDetail problem = ProblemDetail.forStatusAndDetail(HttpStatus.NOT_FOUND, ex.getMessage());
+        problem.setTitle("Resource Not Found");
+        return ResponseEntity.status(problem.getStatus()).body(problem);
     }
 
 
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
-    public ResponseEntity<?> handleTypeMismatch(MethodArgumentTypeMismatchException ex) {
-        String message = String.format(
-                "Invalid value '%s' for parameter '%s'",
-                ex.getValue(),
-                ex.getName()
+    public ResponseEntity<Object> handleTypeMismatch(MethodArgumentTypeMismatchException ex) {
+        ProblemDetail problem = ProblemDetail.forStatus(HttpStatus.BAD_REQUEST);
+        problem.setDetail(
+                String.format(
+                        "Invalid value '%s' for parameter '%s'",
+                        ex.getValue(),
+                        ex.getName()
+                )
         );
-
-        return ResponseEntity.badRequest()
-                .body(message);
-    }
-
-    @ExceptionHandler(HttpMessageNotReadableException.class)
-    public ResponseEntity<BasicErrorResponse> handleMessageNotReadableException(
-            HttpMessageNotReadableException ex
-    ) {
-        BasicErrorResponse err = new BasicErrorResponse();
-        err.setMessage(ex.getMessage());
-        err.setCode("BAD_REQUEST");
-
-        return new ResponseEntity<>(err, HttpStatus.UNAUTHORIZED);
+        return ResponseEntity.badRequest().body(problem);
     }
 
     private Throwable getRootCause(Throwable ex) {
